fix html class input

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
                 <h2 class="fw-bold fs-1 txt-up">Create an account</h2>
 
                 <div class="d-flex flex-col relative">
-                    <img id="error-icon-user" src="assets/img/error-icon.svg"
+                    <img id="error-icon-lname" src="assets/img/error-icon.svg"
                         class="absolute right-5 bottom-20 opacity-0" alt="Icône d'erreur du champ prénom">
-                    <img id="valid-icon-user" src="assets/img/success-icon.svg"
+                    <img id="valid-icon-lname" src="assets/img/success-icon.svg"
                         class="absolute right-5 bottom-20 opacity-0" alt="Icône valide du champ prénom">
 
                     <img src="assets/img/user-icon.svg" class="absolute left-5 bottom-20"
                         alt="Icône du champ nom d'utilisateur">
 
-                    <span id="error-msg-name" class="bg-warn p-1 fs-05 fw-bold opacity-0"></span>
-                    <input id="name" type="text" placeholder="Enter your Name" name="name" class="pr-15 p-1 fw-bold">
+                    <span id="error-msg-lname" class="bg-warn p-1 fs-05 fw-bold opacity-0"></span>
+                    <input id="lname" type="text" placeholder="Enter your Name" name="name" class="pr-15 p-1 fw-bold">
                 </div>
 
                 <div class="d-flex flex-col relative">
-                    <img id="error-icon-user" src="assets/img/error-icon.svg"
+                    <img id="error-icon-fname" src="assets/img/error-icon.svg"
                         class="absolute right-5 bottom-20 opacity-0" alt="Icône d'erreur du champ nom">
-                    <img id="valid-icon-user" src="assets/img/success-icon.svg"
+                    <img id="valid-icon-fname" src="assets/img/success-icon.svg"
                         class="absolute right-5 bottom-20 opacity-0" alt="Icône valide du champ nom">
 
                     <img src="assets/img/user-icon.svg" class="absolute left-5 bottom-20"
