fix html class input lname & fname

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         alt="Icône du champ nom d'utilisateur">
 
                     <span id="error-msg-lname" class="bg-warn p-1 fs-05 fw-bold opacity-0"></span>
-                    <input id="lname" type="text" placeholder="Enter your Name" name="name" class="pr-15 p-1 fw-bold">
+                    <input id="lname" type="text" placeholder="Enter your Name" name="lname" class="pr-15 p-1 fw-bold">
                 </div>
 
                 <div class="d-flex flex-col relative">
@@ -48,7 +48,7 @@
                         alt="Icône du champ nom d'utilisateur">
 
                     <span id="error-msg-lname" class="bg-warn p-1 fs-05 fw-bold opacity-0"></span>
-                    <input id="lname" type="text" placeholder="Enter your Last Name" name="lname"
+                    <input id="fname" type="text" placeholder="Enter your Last Name" name="fname"
                         class="pr-15 p-1 fw-bold">
                 </div>
 
