fix html class input lname & fname

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <img src="assets/img/user-icon.svg" class="absolute left-5 bottom-20"
                         alt="Icône du champ nom d'utilisateur">
 
-                    <span id="error-msg-lname" class="bg-warn p-1 fs-05 fw-bold opacity-0"></span>
+                    <span id="error-msg-fname" class="bg-warn p-1 fs-05 fw-bold opacity-0"></span>
                     <input id="fname" type="text" placeholder="Enter your Last Name" name="fname"
                         class="pr-15 p-1 fw-bold">
                 </div>
